--- a/app/views/admin/quizzes/show.html.erb
+++ b/app/views/admin/quizzes/show.html.erb
@@ -22,20 +22,24 @@
             <td class = "px-3"><%= @quiz.question %></td>
           </tr>
           <tr>
-            <td>選択肢A</td>
+            <td>選択肢1</td>
             <td class = "px-3"><%= @quiz.answer1 %></td>
           </tr>
           <tr>
-            <td>選択肢B</td>
+            <td>選択肢2</td>
             <td class = "px-3"><%= @quiz.answer2 %></td>
           </tr>
           <tr>
-            <td>選択肢C</td>
+            <td>選択肢3</td>
             <td class = "px-3"><%= @quiz.answer3 %></td>
           </tr>
           <tr>
-            <td>選択肢D</td>
+            <td>選択肢4</td>
             <td class = "px-3"><%= @quiz.answer4 %></td>
+          </tr>
+          <tr>
+            <td>正解</td>
+            <td class = "px-3"><%= @quiz.answer %></td>
           </tr>
           <tr>
             <td>解説</td>
