--- a/app/views/admin/quizzes/new.html.erb
+++ b/app/views/admin/quizzes/new.html.erb
@@ -38,7 +38,7 @@
 
         <div class = "row mt-2">
           <div class = "col-3">
-            <%= f.label :選択肢A %>
+            <%= f.label :選択肢1 %>
           </div>
           <div class = "col-9">
             <%= f.text_area :answer1, class: "form-control answer1" %>
@@ -47,7 +47,7 @@
 
         <div class = "row mt-2">
           <div class = "col-3">
-            <%= f.label :選択肢B %>
+            <%= f.label :選択肢2 %>
           </div>
           <div class = "col-9">
             <%= f.text_area :answer2, class: "form-control answer2" %>
@@ -56,7 +56,7 @@
 
         <div class = "row mt-2">
           <div class = "col-3">
-            <%= f.label :選択肢C %>
+            <%= f.label :選択肢3 %>
           </div>
           <div class = "col-9">
             <%= f.text_area :answer3, class: "form-control answer3" %>
@@ -65,10 +65,19 @@
 
         <div class = "row mt-2">
           <div class = "col-3">
-            <%= f.label :選択肢D %>
+            <%= f.label :選択肢4 %>
           </div>
           <div class = "col-9">
             <%= f.text_area :answer4, class: "form-control answer4" %>
+          </div>
+        </div>
+
+        <div class = "row mt-2">
+          <div class = "col-3">
+            <%= f.label :正解 %>
+          </div>
+          <div class = "col-9">
+            <%= f.collection_select :answer, [1,2,3,4], :to_s, :to_s, include_blank: "選択して下さい" %>
           </div>
         </div>
 
