--- a/app/views/public/quizzes/index.html.erb
+++ b/app/views/public/quizzes/index.html.erb
@@ -1,61 +1,74 @@
 <!--<template>-->
-  <div class="container">
-    <h1 class="text-center"><%= @quiz.title %></h1>
-    <div class="question-container">
-      <div class="question-box">Q.<%= @quiz.question %></div>
+  <!--<div class="container">-->
+  <!--  <h1 class="text-center"><%#= @quiz.title %></h1>-->
+  <!--  <div class="question-container">-->
+  <!--    <div class="question-box">Q.<%#= @quiz.question %></div>-->
 
       <!-- 4択 -->
-      <div id="answers">
-        <div class="row">
-          <div class="col-6">
-            <button class="btn btn-primary d-block w-100 large dark">A. <%= @quiz.answer1 %></button>
-          </div>
-          <div class="col-6">
-            <button class="btn btn-primary d-block w-100 large dark">B. <%= @quiz.answer2 %></button>
-          </div>
-        </div>
+  <!--    <div id="answers">-->
+  <!--      <div class="row">-->
+  <!--        <div class="col-6">-->
+  <!--          <button class="btn btn-primary d-block w-100 large dark">A. <%#= @quiz.answer1 %></button>-->
+  <!--        </div>-->
+  <!--        <div class="col-6">-->
+  <!--          <button class="btn btn-primary d-block w-100 large dark">B. <%#= @quiz.answer2 %></button>-->
+  <!--        </div>-->
+  <!--      </div>-->
 
-        <div class="row">
-          <div class="col-6">
-            <button class="btn btn-primary d-block w-100 large dark">C. <%= @quiz.answer3 %></button>
-          </div>
-          <div class="col-6">
-            <button class="btn btn-primary d-block w-100 large dark">D. <%= @quiz.answer4 %></button>
-          </div>
-        </div>
-      </div>
+  <!--      <div class="row">-->
+  <!--        <div class="col-6">-->
+  <!--          <button class="btn btn-primary d-block w-100 large dark">C. <%#= @quiz.answer3 %></button>-->
+  <!--        </div>-->
+  <!--        <div class="col-6">-->
+  <!--          <button class="btn btn-primary d-block w-100 large dark">D. <%#= @quiz.answer4 %></button>-->
+  <!--        </div>-->
+  <!--      </div>-->
+  <!--    </div>-->
 
-      <div class="answer-btn">
-        <button class="btn btn-primary d-block w-100 large">回答する</button>
-      </div>
+  <!--    <div class="answer-btn">-->
+  <!--      <button class="btn btn-primary d-block w-100 large">回答する</button>-->
+  <!--    </div>-->
 
-      <div class="modal fade" id="resultModal" tabindex="-1" role="dialog" aria-labelledby="resultModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
-          <div class="modal-content">
-            <div class="modal-body">
-              <div class="text-center">
-                <div id="resultSuccessText" class="text-center text-success">〇正解！</div>
-                <div id="resultFailureText" class="text-center text-danger">✖不正解</div>
-                <div class="font-weight-bold text-center answer-text">正解は「<%= @answerLabel %>」</div>
-                <div class="pt-3 px-6"><%= @quiz.description %></div>
-                <div class="text-center mb-2">
-                  <button class="btn btn-primary large" data-dismiss="modal">次の問題</button>
-                </div>
-                <div class="text-center">
-                  <a href="/" class="btn btn-link">トップページへ</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+  <!--    <div class="modal fade" id="resultModal" tabindex="-1" role="dialog" aria-labelledby="resultModalLabel" aria-hidden="true">-->
+  <!--      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">-->
+  <!--        <div class="modal-content">-->
+  <!--          <div class="modal-body">-->
+  <!--            <div class="text-center">-->
+  <!--              <div id="resultSuccessText" class="text-center text-success">〇正解！</div>-->
+  <!--              <div id="resultFailureText" class="text-center text-danger">✖不正解</div>-->
+  <!--              <div class="font-weight-bold text-center answer-text">正解は「<%#= @answerLabel %>」</div>-->
+  <!--              <div class="pt-3 px-6"><%#= @quiz.description %></div>-->
+  <!--              <div class="text-center mb-2">-->
+  <!--                <button class="btn btn-primary large" data-dismiss="modal">次の問題</button>-->
+  <!--              </div>-->
+  <!--              <div class="text-center">-->
+  <!--                <a href="/" class="btn btn-link">トップページへ</a>-->
+  <!--              </div>-->
+  <!--            </div>-->
+  <!--          </div>-->
+  <!--        </div>-->
+  <!--      </div>-->
+  <!--    </div>-->
 
-    </div>
-  </div>
+  <!--  </div>-->
+  <!--</div>-->
 <!--</template>-->
 
+<%= @random_quiz.tag %>
+<%= @random_quiz.question %>
+
+<%= form_with url:answer_quiz_path(@random_quiz), method: :post do |f| %>
+  <%= radio_button_tag 'answer', '1' %><%= @random_quiz.answer1 %><br>
+  <%= radio_button_tag 'answer', '2' %><%= @random_quiz.answer2 %><br>
+  <%= radio_button_tag 'answer', '3' %><%= @random_quiz.answer3 %><br>
+  <%= radio_button_tag 'answer', '4' %><%= @random_quiz.answer4 %><br>
+  <%= f.submit 'Submit' %>
+<% end %>
+
+
+
 <script lang="ts">
-import { Component, Vue } from 'vue-property-decorator'
+// import { Component, Vue } from 'vue-property-decorator'
 
 // @Component
 // export default class Quiz extends Vue {
@@ -68,17 +81,17 @@ import { Component, Vue } from 'vue-property-decorator'
 //     description: null,
 //     next_quiz_id: null
 //   }
-  
-  def index
-    @quiz = {}
-    @selected_answer = nil
-    @dialog = false
-    @result = {
-      answer: nil,
-      description: nil,
-      next_quiz_id: nil
-    }
-  end
+
+      // def index
+      //   @quiz = {}
+      //   @selected_answer = nil
+      //   @dialog = false
+      //   @result = {
+      //     answer: nil,
+      //     description: nil,
+      //     next_quiz_id: nil
+      //   }
+      // end
 
   // async getQuiz() {
   //   let params: any = {}
@@ -87,21 +100,21 @@ import { Component, Vue } from 'vue-property-decorator'
   //   const { data } = await this.axios.get(`/quiz`, { params })
   //   return data
   // }
-  
-  def get_quiz
-    title_id = params[:title_id]
-    quiz_id = params[:quiz_id] ? params[:quiz_id] : nil
-    data = Quiz.where(title_id: title_id, quiz_id: quiz_id)
-    render json: data
-  end
+
+        // def get_quiz
+        //   title_id = params[:title_id]
+        //   quiz_id = params[:quiz_id] ? params[:quiz_id] : nil
+        //   data = Quiz.where(title_id: title_id, quiz_id: quiz_id)
+        //   render json: data
+        // end
 
   // selectAnswer(answer: number) {
   //   this.selectedAnswer = answer
   // }
-  
-  def select_answer
-    @selected_answer = params[:answer]
-  end
+
+        // def select_answer
+        //   @selected_answer = params[:answer]
+        // end
 
 
   // クイズの回答を送信する
@@ -114,21 +127,21 @@ import { Component, Vue } from 'vue-property-decorator'
   //   this.result = data
   //   this.dialog = true
   // }
-  
-  def post_answer
-    quiz_id = params[:quiz_id]
-    answer = params[:answer]
-    // # 必要な処理
-    render json: result
-  end
+
+        // def post_answer
+        //   quiz_id = params[:quiz_id]
+        //   answer = params[:answer]
+        //   // # 必要な処理
+        //   render json: result
+        // end
 
   // get answerLabel() {
   //   return eval('this.quiz.answer' + this.result.answer)
   // }
-  
-  def answer_label
-    eval("quiz.answer#{result.answer}")
-  end
+
+        // def answer_label
+        //   eval("quiz.answer#{result.answer}")
+        // end
 
   // goToNextQuiz() {
   //   this.dialog = false
@@ -136,20 +149,20 @@ import { Component, Vue } from 'vue-property-decorator'
   //     this.$router.push('/quiz/' + this.$route.params.titleId + '/' + this.result.next_quiz_id)
   //   }
   // }
-  
-  def go_to_next_quiz
-    dialog = false
-    if result[:next_quiz_id].present?
-      redirect_to quiz_path(title_id: params[:title_id], quiz_id: result[:next_quiz_id])
-    end
-  end
+
+        // def go_to_next_quiz
+        //   dialog = false
+        //   if result[:next_quiz_id].present?
+        //     redirect_to quiz_path(title_id: params[:title_id], quiz_id: result[:next_quiz_id])
+        //   end
+        // end
 
   // async mounted() {
   //   this.quiz = await this.getQuiz()
   // }
-  
-  def mounted
-    @quiz = get_quiz
-  end
+
+        // def mounted
+        //   @quiz = get_quiz
+        // end
 }
 </script>
