--- a/app/views/public/bookmarks/index.html.erb
+++ b/app/views/public/bookmarks/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Public::Bookmarks#index</h1>
-<p>Find me in app/views/public/bookmarks/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h4 class="my-5">ブックマークした問題一覧</h4>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>問題ID</th>
+            <th>タグ</th>
+            <th>タイトル</th>
+            <th colspan = "5"></th>
+          </tr>
+        </thead>
+        <% @bookmark_quizzes.each do |quiz| %>
+          <tr>
+            <td><%= quiz.id %></td>
+            <td><%= quiz.tag %></td>
+            <td><%= link_to quiz.title, quiz_quiz_bookmark_path(quiz, current_user.bookmarks.find_by(quiz_id: quiz).id ) %></td>
+          </tr>
+        <% end %>
+        <%= paginate @bookmark_quizzes %>
+      </table>
+    </div>
+  </div>
+</div>
