--- a/app/views/public/searches/_form.html.erb
+++ b/app/views/public/searches/_form.html.erb
@@ -1,8 +1,15 @@
 <% if user_signed_in? %>
-  <%= form_with url: search_searches_path, method: :get, local: true do |f| %>
+  <%= form_with url: search_path, method: :get, local: true do |f| %>
+  
+    <%= f.radio_button :model, "quiz", checked: true %>
+    <%= f.label :model_quiz, "タイトルから検索" %>
+    <%= f.radio_button :model, "tag" %>
+    <%= f.label :model_tag, "タグから検索" %>
+    
     <%= f.text_field :title %>
     <%#= f.select :model, options_for_select({"Quiz" => "quiz", "Book" => "book"}) %>
-    <%= f.hidden_field :model, value: "quiz" %>
+    <!--下でQuizモデルを指定-->
+    <%#= f.hidden_field :model, value: "quiz" %>
     <%= f.select :method, options_for_select({"完全一致" => "perfect", "前方一致" => "forward", "後方一致" => "backward", "部分一致" => "partial"}) %>
     <%= f.submit "検索" %>
   <% end %>
