--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <button type = "button" class = "btn btn-lg btn-outline-secondary">
       <div class ="address">
       <%= link_to root_path, class: "navbar-brand m-auto" do %>
-        <i class = "fa-solid fa-cake-candles"></i> 設備屋Lv.1 <i class = "fa-solid fa-cake-candles"></i>
+        <i class="fa-solid fa-wrench"></i> 設備屋Lv.1 
       <% end %>
       </div>
     </button>
