--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,52 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<div class = "card bg-dark text-white" style="width: 550px; height: auto;">
+  <%= image_tag 'pexels-cats-coming-1359330.jpg', size: '550x300' %>
+  <div class = "card-img-overlay d-flex">
+    <div class = "m-auto">
+      <h5><strong>
+        このサイトは、管工事施工管理技士の資格取得を目指す者にとっての試練の場です。<br>
+        ここでは、困難な過去問題を克服し、技の深みへと進むための学習が可能です。<br>
+        会員でない方も商品の閲覧はできますが、<br>
+        購入には会員登録が必要になります。
+        </strong>
+      </h5>
+    </div>
+  </div>
+</div>
 
-<%= link_to "問題に挑戦", quizzes_path %>
+<h1></h1>
+
+<h1>管工事施工管理技士とは</h1>
+<h2>管工事施工管理技士の概要</h2>
+<h3>
+  ・一定規模の営業所や建設現場で求められる国家資格
+  ・第一次検定に合格することで技士補の資格を取得できます
+  ・正答率が60％で合格となりますが、働きながらの受験はなかなか難しい場合があります
+</h3>
+<h5>
+  1・2級管工事施工管理技士の技術検定制度は、建設業法第27条に基づく国家試験です。
+  1級管工事施工管理技士の資格を取得すると、特定建設業の「営業所ごとに置く専任の技術者」および現場に配置する「監理技術者」として認められます。さらに、2級管工事施工管理技士の資格であれば、一般建設業の許可を受ける際に必要な「営業所ごとに配置する専任の技術者」および「建設工事における主任技術者」として認められます。これらの資格は、施工管理に携わる者にとって必要不可欠です。
+  このように、施工管理技士は資格取得のメリットが大きく、極めて重要な資格です。工事現場における技術責任者として高い評価を受けています。また、令和3年度より1級技士補が新たに創設され、その価値は一層高まるでしょう。
+  さらに、2級の第一次検定は17歳以上であれば誰でも受験できます。難関試験とはいえませんが、実務経験者が受験する中で一次・二次ともに合格するのは10人中2〜3人程度であり、容易な試験ではありません。
+</h5>
+<h2>管工事施工管理技術検定 1級と2級の違い</h2>
+<h3>
+  ・１級を取得すると監理技術者として認められる
+  ・１級の第一次検定は19歳以上であれば誰でも受験可能。
+  ・２級を取得すると主任技術者として認められる
+  ・２級の第一次検定は17歳以上であれば誰でも受験可能
+</h3>
+<h4>1級施工管理技士</h4>
+<h5>●監理技術者として認められる</h5>
+<h6>元請の特定建設業者が、総額4,500万円以上（建築一式 の場合7,000万円以上）の下請契約を行った場合は法的 に設置する必要があります。</h6>
+<h5>●受験資格</h5>
+<h6>１級の第一次検定は19歳以上であれば誰でも受験可能。</h6>
+<h4>2級施工管理技士</h4>
+<h5>●主任技術者として認められる</h5>
+<h6>元請・下請に関わらず監理技術者が必要な工事以外は全ての工事で法的に配置する必要がある</h6>
+<h5>●受験資格</h5>
+<h6>第一次検定は17歳以上なら誰でも受験可。第二次検定は 現場での実務経験が必要。</h6>
+
+<%= link_to "問題に挑戦", quiz_quiz_path(@random_quiz) %>
 
 <div class="d-flex justify-content-center mb-2">
   <%= render "public/searches/form" %>
