--- a/app/views/public/quizzes/index.html.erb
+++ b/app/views/public/quizzes/index.html.erb
@@ -54,9 +54,9 @@
   <!--</div>-->
 <!--</template>-->
 
-<%= form_with url:answer_quiz_path(@random_quiz), method: :post do |f| %>
-  <%= render 'public/quizzes/quiz', quiz: @random_quiz, f: f %>
-<% end %>
+<%#= form_with url:answer_quiz_path(@random_quiz), method: :post do |f| %>
+  <%#= render 'public/quizzes/quiz_template', quiz: @random_quiz, f: f %>
+<%# end %>
 
 
 
