--- a/app/views/public/searches/_index.html.erb
+++ b/app/views/public/searches/_index.html.erb
@@ -1,22 +1,20 @@
 <table class="table table-hover table-inverse">
-    <!--検索対象モデルがUserではない時(= 検索対象モデルがBookの時) -->
-    <thead>
-      <tr>
-        <th>問題ID</th>
-        <th>タグ</th>
-        <th>タイトル</th>
-        <th colspan = "5"></th>
-      </tr>
-    <tbody>
-    <% @quizzes.each do |quiz| %>
-      <tr>
-        <td><%= quiz.id %></td>
-        <td><%= quiz.tag %></td>
-        <td><%= quiz.title %></td>
-        <td><%#= link_to quiz.title, quiz_quiz_bookmark_path(quiz, current_user.bookmarks.find_by(quiz_id: quiz).id ) %></td>
-        <td><%#= link_to quiz.title, quiz_search_path(quiz, ) %></td>
-      </tr>
-    <% end %>
-    <%= paginate @quizzes %>
-    </tbody>
+  <thead>
+    <tr>
+      <th>問題ID</th>
+      <th>タグ</th>
+      <th>タイトル</th>
+      <th colspan = "5"></th>
+    </tr>
+  </thead>
+  <tbody>
+  <% @quizzes.each do |quiz| %>
+    <tr>
+      <td><%= quiz.id %></td>
+      <td><%= quiz.tag %></td>
+      <td><%= link_to quiz.title, quiz_search_path(quiz, title: @quiz_title, model: @model, method: @method) %></td>
+    </tr>
+  <% end %>
+  <%= paginate @quizzes %>
+  </tbody>
 </table>
