--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -16,7 +16,7 @@
             <td><%= user.id %></td>
             <td><%= link_to user.name, admin_user_path(user) %></td>
             <td><%= user.email %></td>
-            <td><%#= user.user_status %></td>
+            <td><%= User.human_attribute_name("user_status.#{user.user_status}") %></td>
           </tr>
         <% end %>
         <%= paginate @users %>
