--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -18,12 +18,11 @@
           </tr>
           <tr>
             <th>会員ステータス</th>
-            <td><%#= @user.user_status %></td>
+            <td><%= User.human_attribute_name("user_status.#{@user.user_status}") %></td>
           </tr>
           <tr>
             <td></td>
             <td><%= link_to "編集する", edit_admin_user_path(@user) %>
-            <%#= link_to "注文履歴一覧を見る", admin_root_path, class:"btn btn-primary" %>
           </tr>
         </table>
       </div>
