--- a/app/views/public/bookmarks/answer.html.erb
+++ b/app/views/public/bookmarks/answer.html.erb
@@ -1,8 +1,9 @@
-<p><%= @result %></p>
-<p>解説: <%= @quiz.description %></p>
+<!--<p><%#= @result %></p>-->
+<!--<p>解説: <%#= @quiz.description %></p>-->
 <!--<td id="bookmark_btn_<%#= @quiz.id %>">-->
-<div class=<%= "bookmark-" + @quiz.id.to_s %> >
-  <%= render "public/bookmarks/btn", quiz: @quiz %>
-</div>
+<!--<div class=<%#= "bookmark-" + @quiz.id.to_s %> >-->
+<!--  <%#= render "public/bookmarks/btn", quiz: @quiz %>-->
+<!--</div>-->
 
+<%= render "public/quizzes/answer_template", result: @result, quiz: @quiz, quiz_comment: @quiz_comment %>
 <%= link_to "ブックマーク一覧に戻る", quiz_bookmarks_path(current_user) %>
