--- a/app/views/public/quizzes/_quiz_template.html.erb
+++ b/app/views/public/quizzes/_quiz_template.html.erb
@@ -4,4 +4,9 @@
 <%= radio_button_tag 'answer', '2' %><%= quiz.answer2 %><br>
 <%= radio_button_tag 'answer', '3' %><%= quiz.answer3 %><br>
 <%= radio_button_tag 'answer', '4' %><%= quiz.answer4 %><br>
+<%#= f.hidden_field :model, value: @model %>
+<%#= f.hidden_field :method, value: @method %>
+<%= f.hidden_field :model, value: @model %>
+<%= f.hidden_field :title, value: @quiz_title %>
+<%= f.hidden_field :method, value: @method %>
 <%= f.submit 'Submit' %>
