--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,2 +1,32 @@
-<h1>Public::Users#edit</h1>
-<p>Find me in app/views/public/users/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h4 class="my-5">会員情報編集</h4>
+      <%= form_with model: @user, url: user_path, method: :patch do |f| %>
+      <table class="table table-borderless">
+        <tr>
+          <td>会員ID</td>
+          <td><%= @user.id %></td>
+        </tr>
+
+        <tr>
+          <td>ユーザー名</td>
+          <td><%= f.text_field :name, autofocus: true, autocomplete: "username" %></td>
+        </tr>
+
+        <tr>
+          <td>メールアドレス</td>
+          <td><%= f.text_field :email, autofocus: true, autocomplete: "email" %></td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td></td>
+          <td><%= f.submit "変更を保存", class:"btn btn-success" %></td>
+          <td><%= link_to "退会する", withdraw_check_user_path(@user), class:"btn btn-danger" %></td>
+        </tr>
+      </table>
+      <% end %>
+    </div>
+  </div>
+</div>
