--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <div class="flash-message <%= message_type %>"><%= message %></div>
     <% end %>
       <main>
-        <p id = "notice"><%= notice %></p>
+        <!--<p id = "notice"><%#= notice %></p>-->
       </main>
       <%= yield %>
     <%= render 'layouts/footer' %>
