--- a/app/views/public/quizzes/_answer_template.html.erb
+++ b/app/views/public/quizzes/_answer_template.html.erb
@@ -1,15 +1,19 @@
-<p><%= result %></p>
-<p>解説: <%= quiz.description %></p>
-<div class=<%= "bookmark-" + quiz.id.to_s %> >
-  <%= render "public/bookmarks/btn", quiz: quiz %>
-</div>
-<div id="comment_counter">
- <%= render "public/quiz_comments/counter", quiz: quiz %>
-</div>
-<div id="comment_index">
- <%= render "public/quiz_comments/index", quiz: quiz %>
-</div>
-<%= render "public/quiz_comments/form", quiz: quiz, quiz_comment: quiz_comment %>
+<div class="row">
+  <div class="col-md-8">
+    <p><%= result %></p>
+    <p>解説: <%= quiz.description %></p>
+    <div class=<%= "bookmark-" + quiz.id.to_s %> >
+      <%= render "public/bookmarks/btn", quiz: quiz %>
+    </div>
+    <div id="comment_counter">
+     <%= render "public/quiz_comments/counter", quiz: quiz %>
+    </div>
+    <div id="comment_index">
+     <%= render "public/quiz_comments/index", quiz: quiz %>
+    </div>
+    <%= render "public/quiz_comments/form", quiz: quiz, quiz_comment: quiz_comment %>
 
-<!--<p>正答率: <%#= correct_rate(current_user) %>%</p>-->
-<!--<p>正解数: <%#= current_user.correct_answers_count %></p>-->
+    <!--<p>正答率: <%#= correct_rate(current_user) %>%</p>-->
+    <!--<p>正解数: <%#= current_user.correct_answers_count %></p>-->
+  </div>
+</div>
