--- a/app/views/public/quizzes/_quiz_template.html.erb
+++ b/app/views/public/quizzes/_quiz_template.html.erb
@@ -1,12 +1,30 @@
-<%= quiz.tag %><br>
-<%= quiz.question %><br>
-<%= radio_button_tag 'answer', '1' %><%= quiz.answer1 %><br>
-<%= radio_button_tag 'answer', '2' %><%= quiz.answer2 %><br>
-<%= radio_button_tag 'answer', '3' %><%= quiz.answer3 %><br>
-<%= radio_button_tag 'answer', '4' %><%= quiz.answer4 %><br>
-<%#= f.hidden_field :model, value: @model %>
-<%#= f.hidden_field :method, value: @method %>
-<%= f.hidden_field :model, value: @model %>
-<%= f.hidden_field :title, value: @quiz_title %>
-<%= f.hidden_field :method, value: @method %>
-<%= f.submit 'Submit' %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8">
+      タグ：<%= quiz.tag %><br>
+      問題：<%= quiz.question %><br>
+      <%= radio_button_tag 'answer', '1', class: "btn btn-secondary" %><%= quiz.answer1 %><br>
+      <%= radio_button_tag 'answer', '2' %><%= quiz.answer2 %><br>
+      <%= radio_button_tag 'answer', '3' %><%= quiz.answer3 %><br>
+      <%= radio_button_tag 'answer', '4' %><%= quiz.answer4 %><br>
+      <%= f.hidden_field :model, value: @model %>
+      <%= f.hidden_field :title, value: @quiz_title %>
+      <%= f.hidden_field :method, value: @method %>
+      <%= f.submit 'Submit' %>
+    </div>
+  </div>
+
+</div>
+
+
+<div class="btn-group btn-group-toggle" data-toggle="buttons">
+  <label class="btn btn-secondary active">
+    <input type="radio" name="options" id="option1" checked> Active
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="option2"> Radio
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="option3"> Radio
+  </label>
+</div>
