--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -6,7 +6,7 @@
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="card bg-dark">
-        <%= image_tag '建築現場.jpg', size: '550x300', class: 'card-img-top' %>
+        <%= image_tag 'architecture.jpg', size: '550x300', class: 'card-img-top' %>
         <div class="card-img-overlay d-flex">
           <div class="m-auto text-center text-white">
             <h5 class="card-title font-weight-bold text-shadow-black">
