--- a/app/views/admin/quizzes/index.html.erb
+++ b/app/views/admin/quizzes/index.html.erb
@@ -1,25 +1,25 @@
-<div class = "container">
-  <div class = "row">
-    <div class = "col-md-8 mx-auto">
-      <div class = "row">
-        <div class = "col-6">
-          <h5>問題一覧</h5>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="row">
+        <div class="col-6 my-4">
+          <h4>問題一覧</h4>
         </div>
-        <div class = "col-6 text-right">
+        <div class="col-6 my-4 text-right">
           <%= link_to new_admin_quiz_path do %>
-            <button type = "button" class="btn btn-light rounded-circle p-0" style = "width:2rem;height:2rem;">
+            <button type="button" class="btn btn-success">
               <i class = "fa-solid fa-plus"></i>
+              問題新規投稿
             </button>
           <% end %>
         </div>
       </div>
-      <table class = "table table-hover table-inverse mt-3">
+      <table class="table table-hover">
         <thead>
           <tr>
-            <th>問題ID</th>
-            <th>タグ</th>
-            <th>タイトル</th>
-            <th colspan = "5"></th>
+            <th width="10%">問題ID</th>
+            <th width="30%">タグ</th>
+            <th width="60%">タイトル</th>
           </tr>
         </thead>
         <% @quizzes.each do |quiz| %>
