--- a/app/views/admin/quizzes/new.html.erb
+++ b/app/views/admin/quizzes/new.html.erb
@@ -1,11 +1,11 @@
-<div class = "container">
+<div class = "container" style="padding-bottom: 60px;">
   <div class = "row">
-    <div class = "col-md-8 mx-auto">
-      <h5>問題新規登録</h5>
+    <div class = "col-md-10 mx-auto">
+      <h4 class = "my-4">問題新規登録</h4>
     </div>
   </div>
   <div class = "row">
-    <div class = "col-md-6 mx-auto">
+    <div class = "col-md-10 mx-auto">
       <%= form_with model: @quiz, url: admin_quizzes_path, method: :post do |f| %>
       <div class = "form-group">
 
@@ -23,7 +23,7 @@
             <%= f.label :タイトル %>
           </div>
           <div class = "col-9">
-            <%= f.text_field :title, class: "form-control title" %>
+            <%= f.text_field :title, class: "form-control title", rows: 5 %>
           </div>
         </div>
 
@@ -32,7 +32,7 @@
             <%= f.label :問題 %>
           </div>
           <div class = "col-9">
-            <%= f.text_area :question, class: "form-control question" %>
+            <%= f.text_area :question, class: "form-control question", rows: 5 %>
           </div>
         </div>
 
@@ -41,7 +41,7 @@
             <%= f.label :選択肢1 %>
           </div>
           <div class = "col-9">
-            <%= f.text_area :answer1, class: "form-control answer1" %>
+            <%= f.text_area :answer1, class: "form-control answer1", rows: 2 %>
           </div>
         </div>
 
@@ -50,7 +50,7 @@
             <%= f.label :選択肢2 %>
           </div>
           <div class = "col-9">
-            <%= f.text_area :answer2, class: "form-control answer2" %>
+            <%= f.text_area :answer2, class: "form-control answer2", rows: 2 %>
           </div>
         </div>
 
@@ -59,7 +59,7 @@
             <%= f.label :選択肢3 %>
           </div>
           <div class = "col-9">
-            <%= f.text_area :answer3, class: "form-control answer3" %>
+            <%= f.text_area :answer3, class: "form-control answer3", rows: 2 %>
           </div>
         </div>
 
@@ -68,7 +68,7 @@
             <%= f.label :選択肢4 %>
           </div>
           <div class = "col-9">
-            <%= f.text_area :answer4, class: "form-control answer4" %>
+            <%= f.text_area :answer4, class: "form-control answer4", rows: 2 %>
           </div>
         </div>
 
@@ -86,27 +86,9 @@
             <%= f.label :解説 %>
           </div>
           <div class = "col-9">
-            <%= f.text_area :description, class: "form-control description" %>
+            <%= f.text_area :description, class: "form-control description", rows: 5 %>
           </div>
         </div>
-
-        <!--<div class = "row mt-2">-->
-        <!--  <div class = "col-3">-->
-        <!--    <%#= f.label :ジャンル %>-->
-        <!--  </div>-->
-        <!--  <div class = "col-9">-->
-        <!--    <%#= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "選択して下さい" %>-->
-        <!--  </div>-->
-        <!--</div>-->
-
-        <!--<div class = "row mt-2">-->
-        <!--  <div class = "col-3">-->
-        <!--    <%#= f.label :税抜価格 %>-->
-        <!--  </div>-->
-        <!--  <div class = "col-8">-->
-        <!--    <%#= f.text_field :price, class: "form-control price" %>-->
-        <!--  </div>-->
-        <!--</div>-->
 
         <div class = "actions text-center mt-3">
           <%= f.submit "新規登録", class: "btn btn-success" %>
