--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,22 +1,30 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h4 class="my-5">会員一覧</h4>
-      <table class="table">
+      <h4 class="my-4">会員一覧</h4>
+      <table class="table table-hover">
         <thead>
           <tr>
             <th>会員ID</th>
             <th>ユーザー名</th>
             <th>メールアドレス</th>
-            <th>ステータス</th>
+            <th colspan="2">ステータス</th>
           </tr>
         </thead>
         <% @users.each do |user| %>
           <tr>
             <td><%= user.id %></td>
-            <td><%= link_to user.name, admin_user_path(user) %></td>
+            <td><%= user.name %></td>
             <td><%= user.email %></td>
             <td><%= User.human_attribute_name("user_status.#{user.user_status}") %></td>
+            <td>
+              <%#= link_to "編集する", edit_admin_user_path(@user) %>
+              <%= link_to edit_admin_user_path(user) do %>
+                <button type="button" class="btn btn-success btn-sm">
+                  編集
+                </button>
+              <% end %>
+            </td>
           </tr>
         <% end %>
         <%= paginate @users %>
