--- a/app/views/public/bookmarks/index.html.erb
+++ b/app/views/public/bookmarks/index.html.erb
@@ -1,14 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h4 class="my-5">ブックマークした問題一覧</h4>
-      <table class="table">
+      <h4 class="my-4">ブックマークした問題一覧</h4>
+      <table class="table table-hover">
         <thead>
           <tr>
-            <th>問題ID</th>
-            <th>タグ</th>
-            <th>タイトル</th>
-            <th colspan = "5"></th>
+            <th width="10%">問題ID</th>
+            <th width="30%">タグ</th>
+            <th width="60%">タイトル</th>
           </tr>
         </thead>
         <% @bookmark_quizzes.each do |quiz| %>
