--- a/app/views/public/quizzes/_quiz_template.html.erb
+++ b/app/views/public/quizzes/_quiz_template.html.erb
@@ -1,6 +1,4 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-8">
+
       タグ：<%= quiz.tag %><br>
       問題：<%= quiz.question %><br>
       <%= radio_button_tag 'answer', '1', class: "btn btn-secondary" %><%= quiz.answer1 %><br>
@@ -10,11 +8,7 @@
       <%= f.hidden_field :model, value: @model %>
       <%= f.hidden_field :title, value: @quiz_title %>
       <%= f.hidden_field :method, value: @method %>
-      <%= f.submit 'Submit' %>
-    </div>
-  </div>
-
-</div>
+      <%= f.submit '回答' %>
 
 
 <div class="btn-group btn-group-toggle" data-toggle="buttons">
