--- a/app/views/public/searches/_index.html.erb
+++ b/app/views/public/searches/_index.html.erb
@@ -1,10 +1,9 @@
-<table class="table table-hover table-inverse">
+<table class="table table-hover">
   <thead>
     <tr>
-      <th>問題ID</th>
-      <th>タグ</th>
-      <th>タイトル</th>
-      <th colspan = "5"></th>
+      <th width="10%">問題ID</th>
+      <th width="30%">タグ</th>
+      <th width="60%">タイトル</th>
     </tr>
   </thead>
   <tbody>
