レイアウト諸々修正

--- a/app/views/admin/quizzes/index.html.erb
+++ b/app/views/admin/quizzes/index.html.erb
@@ -32,8 +32,9 @@
         <% end %>
         </tbody>
       </table>
+      <div class = "col-md-9 d-flex justify-content-center">
+        <%= paginate @quizzes %>
+      </div>
     </div>
   </div>
 </div>
-<%= paginate @quizzes %>
-
