--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,53 +1,66 @@
-<div class="d-flex justify-content-center mb-2">
-  <%= render "public/searches/form" %>
-</div>
-
-<div class="container" style="padding-bottom: 60px;">
+<div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <div class="card bg-dark">
+      <div class="card">
         <%= image_tag 'architecture.jpg', size: '550x300', class: 'card-img-top' %>
         <div class="card-img-overlay d-flex">
-          <div class="m-auto text-center text-white">
-            <h5 class="card-title font-weight-bold text-shadow-black">
-              学習アプリは、管工事施工管理技士を志す者たちに、真の技術者への道を切り拓く試練の場です。<br>
-              過酷な過去問題を乗り越え、鋼のような意志を鍛え、建築の頂点を目指せ！
+          <div class="m-auto">
+            <h5 class="card-title text-light font-weight-bold text-center">
+              当サイトは、管工事施工管理技士を志す者たちに、<br><br>
+              真の技術者への道を切り拓く試練の場です。<br><br>
+              過酷な過去問題を乗り越え、鋼のような意志を鍛え、<br><br>
+              建築の頂点を目指せ！
             </h5>
           </div>
         </div>
       </div>
-      <% if @random_quiz != nil %>
-        <%= link_to "問題に挑戦", quiz_quiz_path(@random_quiz), class: "btn btn-primary mt-4 mb-2" %>
-      <% end %>
-      <h1 class="mt-4 mb-4 text-center">管工事施工管理技士とは</h1>
-      <h2>管工事施工管理技士の概要</h2>
+      <h2 class="mt-4 mb-4 text-center">２級管の問題にチャレンジ！</h2>
+      <h5>【問題】</h5>
+      <p>大気中の水蒸気に関する記述のうち、適切でないものはどれか。</p>
+      <ol>
+        <li>水蒸気の飽和圧力は、温度が上昇すると増加する。</li>
+        <li>水蒸気の飽和圧力は、気圧が上昇すると増加する。</li>
+        <li>飽和水蒸気量は、温度が低いときに大きくなる。</li>
+        <li>水蒸気の絶対湿度は、空気の温度に比例して増加する。</li>
+      </ol>
       <p>
-        ・一定規模の営業所や建設現場で求められる国家資格<br>
-        ・第一次検定に合格することで技士補の資格を取得できます<br>
-        ・正答率が60％で合格となりますが、働きながらの受験はなかなか難しい場合があります
+        解答は新規登録後に確認できます。<br>
+        新規会員登録は<%= link_to "こちら", new_user_registration_path %>
       </p>
+      <h2 class="mt-4 mb-4 text-center">管工事施工管理技士とは</h2>
+      <h3>管工事施工管理技士の概要</h3>
+      <ul>
+        <li>一定規模の営業所や建設現場で求められる国家資格</li>
+        <li>第一次検定に合格することで技士補の資格を取得できます</li>
+        <li>正答率が60％で合格となりますが、働きながらの受験はなかなか難しい場合があります</li>
+      </ul>
       <p>
         1・2級管工事施工管理技士の技術検定制度は、建設業法第27条に基づく国家試験です。
-        1級管工事施工管理技士の資格を取得すると、特定建設業の「営業所ごとに置く専任の技術者」および現場に配置する「監理技術者」として認められます。さらに、2級管工事施工管理技士の資格であれば、一般建設業の許可を受ける際に必要な「営業所ごとに配置する専任の技術者」および「建設工事における主任技術者」として認められます。これらの資格は、施工管理に携わる者にとって必要不可欠です。
-        このように、施工管理技士は資格取得のメリットが大きく、極めて重要な資格です。工事現場における技術責任者として高い評価を受けています。また、令和3年度より1級技士補が新たに創設され、その価値は一層高まるでしょう。
-        さらに、2級の第一次検定は17歳以上であれば誰でも受験できます。難関試験とはいえませんが、実務経験者が受験する中で一次・二次ともに合格するのは10人中2〜3人程度であり、容易な試験ではありません。
+        1級管工事施工管理技士の資格を取得すると、特定建設業の「営業所ごとに置く専任の技術者」および現場に配置する「監理技術者」として認められます。<br>
+        さらに、2級管工事施工管理技士の資格であれば、一般建設業の許可を受ける際に必要な「営業所ごとに配置する専任の技術者」および「建設工事における主任技術者」として認められます。
+        これらの資格は、施工管理に携わる者にとって必要不可欠です。<br>
+        このように、施工管理技士は資格取得のメリットが大きく、極めて重要な資格です。
+        工事現場における技術責任者として高い評価を受けています。
+        また、令和3年度より1級技士補が新たに創設され、その価値は一層高まるでしょう。<br>
+        さらに、2級の第一次検定は17歳以上であれば誰でも受験できます。
+        難関試験とはいえませんが、実務経験者が受験する中で一次・二次ともに合格するのは10人中2〜3人程度であり、容易な試験ではありません。
       </p>
-      <h2>管工事施工管理技術検定 1級と2級の違い</h2>
-      <p>
-        ・１級を取得すると監理技術者として認められる<br>
-        ・１級の第一次検定は19歳以上であれば誰でも受験可能。<br>
-        ・２級を取得すると主任技術者として認められる<br>
-        ・２級の第一次検定は17歳以上であれば誰でも受験可能
-      </p>
-      <h4>1級施工管理技士</h4>
-      <p>●監理技術者として認められる</p>
+      <h4>管工事施工管理技術検定 1級と2級の違い</h4>
+      <ul>
+        <li>１級を取得すると監理技術者として認められる</li>
+        <li>１級の第一次検定は19歳以上であれば誰でも受験可能</li>
+        <li>２級を取得すると主任技術者として認められる</li>
+        <li>２級の第一次検定は17歳以上であれば誰でも受験可能</li>
+      </ul>
+      <h5>1級施工管理技士</h5>
+      <h6>●監理技術者として認められる</h6>
       <p>元請の特定建設業者が、総額4,500万円以上（建築一式 の場合7,000万円以上）の下請契約を行った場合は法的 に設置する必要があります。</p>
-      <p>●受験資格</p>
+      <h6>●受験資格</h6>
       <p>１級の第一次検定は19歳以上であれば誰でも受験可能。</p>
-      <h4>2級施工管理技士</h4>
-      <p>●主任技術者として認められる</p>
+      <h5>2級施工管理技士</h5>
+      <h6>●主任技術者として認められる</h6>
       <p>元請・下請に関わらず監理技術者が必要な工事以外は全ての工事で法的に配置する必要がある</p>
-      <p>●受験資格</p>
+      <h6>●受験資格</h6>
       <p>第一次検定は17歳以上なら誰でも受験可。第二次検定は 現場での実務経験が必要。</p>
     </div>
   </div>
