--- a/app/views/public/quiz_comments/_index.html.erb
+++ b/app/views/public/quiz_comments/_index.html.erb
@@ -8,8 +8,8 @@
   <% quiz.quiz_comments.each do |quiz_comment| %>
   <tbody>
     <tr>
-      <td><%= quiz_comment.user.name %></td>
-      <td><%= quiz_comment.comment %></td>
+      <td>ユーザー名:<%= quiz_comment.user.name %></td>
+      <td>コメント:<%= quiz_comment.comment %></td>
       <td>
         <% if quiz_comment.user == current_user %>
           <%= link_to "Destroy", quiz_quiz_comment_path(quiz, quiz_comment), method: :delete, class: "btn btn-sm btn-danger float-end", remote: true %>
