--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -27,8 +27,10 @@
             </td>
           </tr>
         <% end %>
-        <%= paginate @users %>
       </table>
+      <div class = "col-md-9 d-flex justify-content-center">
+        <%= paginate @users %>
+      </div>
     </div>
   </div>
 </div>
