--- a/app/views/public/quizzes/_quiz_template.html.erb
+++ b/app/views/public/quizzes/_quiz_template.html.erb
@@ -1,24 +1,29 @@
+<h6 class="text-right">【タグ】<%= quiz.tag %><br></h6>
+<h4>【問題】</h4>
+<h5><%= quiz.question %><br><br></h5>
+<%= radio_button_tag 'answer', '1', true %>  <%= quiz.answer1 %><br>
+<%= radio_button_tag 'answer', '2' %>  <%= quiz.answer2 %><br>
+<%= radio_button_tag 'answer', '3' %>  <%= quiz.answer3 %><br>
+<%= radio_button_tag 'answer', '4' %>  <%= quiz.answer4 %><br><br>
+<%= f.submit '回答', class: 'btn btn-success' %>
 
-      タグ：<%= quiz.tag %><br>
-      問題：<%= quiz.question %><br>
-      <%= radio_button_tag 'answer', '1', class: "btn btn-secondary" %><%= quiz.answer1 %><br>
-      <%= radio_button_tag 'answer', '2' %><%= quiz.answer2 %><br>
-      <%= radio_button_tag 'answer', '3' %><%= quiz.answer3 %><br>
-      <%= radio_button_tag 'answer', '4' %><%= quiz.answer4 %><br>
-      <%= f.hidden_field :model, value: @model %>
-      <%= f.hidden_field :title, value: @quiz_title %>
-      <%= f.hidden_field :method, value: @method %>
-      <%= f.submit '回答' %>
+<%= f.hidden_field :model, value: @model %>
+<%= f.hidden_field :title, value: @quiz_title %>
+<%= f.hidden_field :method, value: @method %>
 
-
-<div class="btn-group btn-group-toggle" data-toggle="buttons">
-  <label class="btn btn-secondary active">
-    <input type="radio" name="options" id="option1" checked> Active
-  </label>
-  <label class="btn btn-secondary">
-    <input type="radio" name="options" id="option2"> Radio
-  </label>
-  <label class="btn btn-secondary">
-    <input type="radio" name="options" id="option3"> Radio
-  </label>
-</div>
+<!--余裕があればやりたいこと-->
+<!--トグルスイッチ式ラジオボタン-->
+<!--<div class="btn-group btn-group-toggle" data-toggle="buttons">-->
+<!--  <%#= label_tag 'answer1', class: 'btn btn-secondary active' do %>-->
+<!--    <%#= radio_button_tag 'answer', '1', true, autocomplete: 'off' %>-->
+<!--    <%#= quiz.answer1 %>-->
+<!--  <%# end %>-->
+<!--  <%#= label_tag 'answer2', class: 'btn btn-secondary' do %>-->
+<!--    <%#= radio_button_tag 'answer', '2', false, autocomplete: 'off' %>-->
+<!--    <%#= quiz.answer2 %>-->
+<!--  <%# end %>-->
+<!--  <%#= label_tag 'answer3', class: 'btn btn-secondary' do %>-->
+<!--    <%#= radio_button_tag 'answer', '3', false, class: 'd-none' %>-->
+<!--    <%#= quiz.answer3 %>-->
+<!--  <%# end %>-->
+<!--</div>-->
