--- a/app/views/public/quizzes/answer.html.erb
+++ b/app/views/public/quizzes/answer.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="padding-bottom: 60px;">
   <div class="row">
     <div class="col">
       <%= render "public/quizzes/answer_template", result: @result, quiz: @quiz, quiz_comment: @quiz_comment %>
