--- a/app/views/public/quizzes/quiz.html.erb
+++ b/app/views/public/quizzes/quiz.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
+  <div class="row justify-content-center">
+    <div class="col-md-8 mt-4 mb-4">
       <%= form_with url:answer_quiz_path(@random_quiz), method: :post do |f| %>
         <%= render 'public/quizzes/quiz_template', quiz: @random_quiz, f: f %>
       <% end %>
