--- a/app/views/public/users/_answer_chart.html.erb
+++ b/app/views/public/users/_answer_chart.html.erb
@@ -2,79 +2,57 @@
 <script>
   // ページが読み込まれたときの処理
   $(document).on('turbolinks:load', function() {
-
     // グラフを描画するためのCanvas要素を取得
     var ctx = document.getElementById("postCountChart");
-
     // Chart.jsを使ってグラフを作成
     var postCountChart = new Chart(ctx, {
-      type: 'line', // ラインチャートを使用
       data: {
         // グラフのラベル（x軸の値）
         labels: ['6日前', '5日前', '4日前', '3日前', '2日前', '1日前', '今日'],
-
-        datasets: [
-          {
+        datasets: [{
             // ラインチャート
-            // type: 'line'
+            type: 'line',
             // データセットのラベル
-            label: '正答率',
-
+            label: '正答数',
             // データセットの値
             data: [
-              <% (1..7).each do |i| %>
-                <%= user.day_answer_parcent(Time.now - i.day) %>,
+              <% [6,5,4,3,2,1,0].each do |i| %>
+                <%= user.day_answer_count(Time.now - i.day) %>,
               <% end %>
             ],
-
             // グラフの線の色（緑）
-            borderColor: "rgba(0, 255, 0, 1)",
-
-            // グラフの背景色（透明）
-            backgroundColor: "rgba(0, 0, 0, 0)",
-
+            borderColor: "rgba(255, 99, 89, 100)",
             // グラフの曲線の滑らかさ（0から1の範囲で設定。数値が大きくなるほど曲線が滑らかになる）
             tension: 0.3
           },
           {
             // バー
-            // type: 'bar',
+            type: 'bar',
             // データセットのラベル
             label: '回答数',
-
             // データセットの値
             data: [
-              <% (1..7).each do |i| %>
-                <%= i %>,
+              <% [6,5,4,3,2,1,0].each do |i| %>
+                <%= user.day_quiz_count(Time.now - i.day) %>,
               <% end %>
             ],
-
-            // グラフの線の色（緑）
-            borderColor: "rgba(234,255, 133, .88)",
-
             // グラフの背景色（透明）
-            backgroundColor: "rgba(0, 0, 0, 0)",
-
-            // グラフの曲線の滑らかさ（0から1の範囲で設定。数値が大きくなるほど曲線が滑らかになる）
-            tension: 0.3
-          }
+            backgroundColor: "rgba(171, 222, 230, 1.00)",
+          },
         ],
       },
-
       options: {
         title: {
           // グラフのタイトル表示
           display: true,
           text: '7日間の正答率'
         },
-
         responsive: true, // グラフのレスポンシブデザインを有効化
-
         scales: {
           y: {
             // y軸（縦軸）の設定。設定しないと自動になるので書かなくても良い。
             suggestedMin: 0, // 最小値を0に設定
-            suggestedMax: 100 // 最大値を10に設定
+            suggestedMax: 10 // 最大値を10に設定
           },
         },
       }
